# Instaladores

./: README.txt
Origem/: Bar_test.c  Bibli.h  CMakeLists.txt  Struct.c  main.c
